# snake-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yaml
docs/: CHANGELOG.md
src/: main.rs  menu.rs
src/game/: backend.rs  frontend.rs  mod.rs
src/highscore/: mod.rs
src/settings/: backend.rs  mod.rs
