[package]
name = "snake"
version = "0.2.1"
authors = ["Uttarayan Mondal <uttarayan21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncurses = "5.100.0"
serde = { version = "1.0.121", features = ["derive"] }
# serde = "1.0.121"
# serde_derive = "1.0.121"
toml = "0.5.8"
rand = "0.8.0"
dirs = "3.0.1"
