[package]
name = "snake"
version = "0.2.3"
authors = ["Uttarayan Mondal <uttarayan21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncurses = "5.100.0"
serde = { version = "1.0.121", features = ["derive"] }
serde_yaml = "0.8.17"
rand = "0.8.0"
dirs = "3.0.1"
derive-error = "0.0.5"
